# raft-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: main.yml
examples/: dist_leveldb.rs  simple.rs
src/: aplog.rs  config.rs  lib.rs  log.rs  main.rs  metadata.rs  node.rs  rpc.rs  test.rs
src/test/: candidate.rs  follower.rs  integration.rs  leader.rs
tests/: request_vote.rs
