[package]
name = "raft-rs"
version = "0.1.0"
authors = ["da.lum <david.lum91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

leveldb = "0.8"
rand = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
