[package]
name = "raftrs"
version = "0.1.0"
authors = ["da.lum <david.lum91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
commitlog = "0.1" # { git = "https://github.com/davlum/commitlog", branch = "feature/Add-truncate-at-#29" }
futures = "0.3"
log = "0.4"

[dev-dependencies]
leveldb = "0.8"
env_logger = "0.8"
rocket = "0.4.7"
db-key = "0.0.5"
